--- a/external/libusb/libusb.vcxproj.filters
+++ b/external/libusb/libusb.vcxproj.filters
@@ -5,7 +5,7 @@
     <ClCompile Include="src\error.c" />
     <ClCompile Include="src\registry.c" />
     <ClCompile Include="src\usb.c" />
-    <ClCompile Include="src\windows.c" />
+    <ClCompile Include="src\windows.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\lusb0_usb.h" />
@@ -14,5 +14,6 @@
     <ClInclude Include="src\libusb-win32_version.h" />
     <ClInclude Include="src\registry.h" />
     <ClInclude Include="src\usbi.h" />
+    <ClInclude Include="src\libwinusb.h" />
   </ItemGroup>
 </Project>
