--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ on:
 
 jobs:
   build:
-    uses: mariusgreuel/avrdude/.github/workflows/build.yml@main
+    uses: mariusgreuel/avrdude/.github/workflows/build.yml@windows
 
   release:
     needs: build
